add websocket, login and sign up efficiency, add uname, add SOLID principles, fadd optimazion CLS